# TermEdit

./: Cargo.toml  README.md
Linters/: Rust.rs
assets/: armAsmSyntaxHighlighting.lua  cppSyntaxHighlighting.lua  luaSyntaxHighlighting.lua  nullSyntaxHighlighting.lua  pythonSyntaxHighlighting.lua  rustSyntaxHighlighting.lua  tomlSyntaxHighlighting.lua
data/: syntaxHighlighting.json
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: CodeTabs.rs  Colors.rs  DataManager.rs  FileManager.rs  RuntimeScheduler.rs  StringPatternMatching.rs  TermRender.rs  TokenInfo.rs  Tokens.rs  eventHandler.rs  languageServer.rs  main.rs
