[package]
name = "TermEdit"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0-alpha.2"
tokio = { version = "1.44.2", features = ["full"] }  # Async I/O
vte = "0.15.0"  # For escape sequence parsing
arboard = "3.5.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
log = "0.4.27"
