[package]
name = "TermEdit"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
tokio = { version = "1.44.2", features = ["full"] }  # Async I/O
vte = "0.15.0"  # For escape sequence parsing
arboard = "3.5.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
mlua = { version = "0.10.3", features = ["luau", "send"] }
crossbeam = "0.8.4"
proc_macros = { path = "proc_macros" }
parking_lot = "0.12.4"
serde_json = "1.0.140"